--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ section.mob-galleries {
 
 footer {
   background-color: hsl(169, 41%, 58%);
-  padding: 5% 0px;
+  padding: 40px 0px;
 }
 
 p.footer {
